# pcloudcc-lneely

./: .clang-tidy  .gitignore  CLI11.hpp  CMakeLists.txt  LOG-MANAGEMENT.md  Makefile  README.md  bookmarks.html  compile_commands.json  control_tools.cpp  control_tools.h  default.nix  detect_fuse.sh  flake.nix  gitcommit.h  main.cpp  pcloudcc.logrotate  pclsync_lib.cpp  pclsync_lib.h  pclsync_lib_c.cpp  pclsync_lib_c.h  rpcclient.cpp  rpcclient.h  tags  test_deadlock_forced
.github/workflows/: c-cpp.yml  ci.yml  codeql.yml
cmd/pcloudcc/: control_tools.cpp  control_tools.h  main.cpp  pclsync_lib.cpp  pclsync_lib.h  pclsync_lib_c.cpp  pdevice_monitor.c  pdevice_monitor.h
container/: README.md  debian.sh  fedora.sh  slackware.sh  ubuntu.sh
dev/: README.md  container-build.sh  devhost-arch-arm64.sh  devhost-arch.sh  devhost-debian.sh  devhost-fedora.sh  rename.sh  sync.sh
doc/: BUILD.md  CONTRIBUTING.md  DEVICE-VALIDATION.md  MBEDTLS-3.x.md  USAGE.md  request-response.org
lib/mbedtls/: CMakeLists.txt
lib/mbedtls-1.3.10/: Makefile
lib/mbedtls-1.3.10/include/polarssl/: ssl.h
lib/mbedtls-2.1.14/: CMakeLists.txt
lib/pclsync/: LICENSE  Makefile  miniz.h  paccountevents.h  papi.c  papi.h  pasyncnet.c  pbusinessaccount.c  pbusinessaccount.h  pcache.c  pcache.h  pcallbacks.c  pcloudcrypto.c  pcloudcrypto.h  pcompat.c  pcompat.h  pcompiler.h  pcompression.c  pcompression.h  pcontacts.c  pcontacts.h  pcrc32c.c  pcrypto.c  pdatabase.h  pdevice_monitor.c  pdevice_monitor.h  pdevicemap.c  pdevicemap.h  pdiff.c  pdiff.h  pdownload.c  pdownload.h  pexternalstatus.c  pexternalstatus.h  pfileops.h  pfolder.c  pfolder.h  pfs.c  pfs.h  pfscrypto.c  (+62 more)
lib/pclsync/lib/poverlay_linux/: overlay_client.c
lib/poverlay_linux/: Makefile  debug.c  debug.h  overlay_client.c  overlay_client.h  sockets.h
pCloudCC/: #main.cpp#  CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  control_tools.cpp  control_tools.h  main.cpp  pcloudcc  pclsync_lib.cpp  pclsync_lib.h  pclsync_lib_c.cpp  pclsync_lib_c.h
pCloudCC/.cache/clangd/index/: aes.h.2D4697FCDFC58A1E.idx  bignum.h.C7221034DB10C37D.idx  check_config.h.CCDBDAC7AA45D497.idx  config.h.9CC473B8219EF89B.idx  control_tools.cpp.458057749CE0FC35.idx  control_tools.h.72BB4E7228E7309B.idx  main.cpp.86E4FA8CF3B358FE.idx  md.h.F9FE6940DACE085F.idx  overlay_client.h.5F98158F11539946.idx  pclsync_lib.cpp.9930FAF5A76EDE54.idx  pclsync_lib.h.72CB4CB82E13D793.idx  pclsync_lib_c.cpp.BBF1C11EB72308EC.idx  pclsync_lib_c.h.333C53A0AF4445BD.idx  rsa.h.132D8AC900882C95.idx  (+4 more)
pCloudCC/arch/: PKGBUILD  pcloudcc-20240615-1-x86_64.pkg.tar.zst  pcloudcc-debug-20240615-1-x86_64.pkg.tar.zst
pCloudCC/lib/mbedtls/: Makefile
pCloudCC/lib/pclsync/: cli.c  compile_commands.json  miniz-changelog.txt  paccountevents.h  papi.c  pasyncnet.h  pbusinessaccount.c  pcallbacks.c  pcallbacks.h  pcloudcrypto.c  pcompat.c  pcompat.h  pcompression.c  pcompression.h  pcontacts.h  pcrc32c.h  pcrypto.c  pcrypto.h  pdevice_monitor.c  pdevice_monitor.h  pdevicemap.h  pdiff.c  pdiff.h  pdownload.c  pdownload.h  pexternalstatus.h  pfileops.c  pfolder.c  pfolder.h  pfs.c  pfscrypto.h  pfsfolder.c  pfsstatic.c  pfsstatic.h  pfsupload.c  pintervaltree.c  plibs.c  plocalnotify.h  plocalscan.c  plocalscan.h  (+41 more)
pCloudCC/lib/poverlay_linux/: overlay_client.c  overlay_client.h
pclsync/: Makefile  debug.c  debug.h  overlay_client.c  overlay_client.h  paccountevents.h  papi.c  papi.h  pasyncnet.c  pasyncnet.h  pbusinessaccount.c  pbusinessaccount.h  pcache.c  pcache.h  pcallbacks.c  pcallbacks.h  pcloudcrypto.c  pcloudcrypto.h  pcommands.h  pcompat.c  pcompat.h  pcompiler.h  pcontacts.c  pcrc32c.c  pcrc32c.h  pcrypto.c  pcrypto.h  pcryptofolder.c  pcryptofolder.h  pdatabase.h  pdbg.c  pdbg.h  pdeflate.c  pdeflate.h  pdevice.c  pdevice.h  pdevice_monitor.c  pdevice_monitor.h  pdevmon.c  pdevmon.h  (+136 more)
pclsync/debug/: pfs_debug.c  pfstasks_debug.c  pnetlibs_debug.c  psock_debug.c  psql_debug.c  psys_debug.c
poverlay_linux/: Makefile  overlay_client.c
tests/: plocks_probe  plocks_probe2  plocks_probe3  plocks_trace  test_pfs_lock_ordering  test_signal_safety  test_signal_safety.c
tests/fault-inject/: test_deadlock_forced.c  test_new_code  test_new_code.c  test_old  test_old_aggressive  test_old_aggressive.c  test_pfs_deadlock_validation.md
tests/helpers/: psql_test_helpers.c  psql_test_helpers.h
tests/smoke-tests/: smoke-test-pfs-locks.sh
tests/stubs/: test_stubs.c  test_stubs_cpp.c
tests/unit-tests/: test_pdbg_path.c  test_pdiff_helpers.c  test_pfs_helpers.c  test_pfs_lock_ordering.c  test_pfstasks_db.c  test_pfstasks_tree.c  test_pfsupload.c  test_pintervaltree.c  test_plocalscan_helpers.c  test_plocks.c  test_ppagecache.c  test_prun.c  test_ptask_free.c  test_ptools_errptr.c  test_ptools_params.c  test_ptree.c  test_read_response.cpp
(+101 files in other folders)
